@@ -13,7 +13,7 @@ filebeat:
         review: 1
         type: log
       ignore_older: 0
-      close_inactive: 1h
+      close_inactive: 5m
       scan_frequency: 10s
       harvester_buffer_size: 5000
       tail_files: false
